fix: remove non-owners internal users from temporary room when they leave the meeting (#196)
feat: set internal users as temporary users when joining temporary room through waiting room

ref: CO-2390